--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests.csproj
@@ -151,9 +151,7 @@
     <Compile Include="Testing\ProjectTreeParser\ProjectTreeParser.cs" />
     <Compile Include="Testing\ProjectTreeParser\ProjectTreeParserTests.cs" />
     <Compile Include="Testing\ProjectTreeWriterOptions.cs" />
-    <Compile Include="Testing\ProjectTreeProvider.MutableProjectTree.cs" />
-    <Compile Include="Testing\ProjectTreeProvider.cs" />
-    <Compile Include="Testing\ProjectTreeProviderTests.cs" />
+    <Compile Include="Testing\ProjectTreeParser\ProjectTreeParser.MutableProjectTree.cs" />
     <Compile Include="Testing\ProjectTreeWriter.cs" />
     <Compile Include="Testing\ProjectTreeParser\StringReader.cs" />
     <Compile Include="Testing\ProjectTreeParser\Tokenizer.IdentifierParseOptions.cs" />
