--- a/src/ExpressionEvaluator/CSharp/Test/ResultProvider/CSharpResultProviderTest.csproj
+++ b/src/ExpressionEvaluator/CSharp/Test/ResultProvider/CSharpResultProviderTest.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ExpansionTests.cs" />
     <Compile Include="FormatSpecifierTests.cs" />
     <Compile Include="FullNameTests.cs" />
+    <Compile Include="FunctionPointerTests.cs" />
     <Compile Include="Helpers\TestTypeExtensions.cs" />
     <Compile Include="NativeViewTests.cs" />
     <Compile Include="ObjectIdTests.cs" />
