Remove linux coreclr binary patching
After updating to the latest CoreCLR NuGet packages we no longer need to
be copying binaries from a drop share to run. This change adds a csc.sh
and a vbc.sh so we can run on the CoreRun host on Linux like we do on
Windows. The change also eliminates some cruft from the cibuild like the
semaphore restore.

--- a/src/Compilers/VisualBasic/VbcCore/project.json
+++ b/src/Compilers/VisualBasic/VbcCore/project.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "Microsoft.NETCore.Platforms": "1.0.1-beta-23321",
     "Microsoft.NETCore.Runtime.CoreCLR": "1.0.1-beta-23321",
-    "Microsoft.NETCore.TestHost-x64": "1.0.0-beta-23213",
+    "Microsoft.NETCore.TestHost": "1.0.0-beta-23321",
     "System.AppContext": "4.0.1-beta-23321",
     "System.Collections": "4.0.11-beta-23321",
     "System.Collections.Immutable": "1.1.36",
@@ -25,12 +25,13 @@
     "System.Runtime.InteropServices": "4.0.21-beta-23321",
     "System.Runtime.Loader": "4.0.0-beta-23321",
     "System.Runtime.Serialization.Json": "4.0.1-beta-23321",
-    "System.Security.Cryptography.Hashing.Algorithms": "4.0.0-beta-23311",
+    "System.Security.Cryptography.Algorithms": "4.0.0-beta-23321",
     "System.Text.Encoding": "4.0.11-beta-23321",
     "System.Text.Encoding.CodePages": "4.0.1-beta-23321",
     "System.Text.Encoding.Extensions": "4.0.11-beta-23321",
     "System.Threading": "4.0.11-beta-23321",
     "System.Threading.Tasks": "4.0.11-beta-23321",
+    "System.Threading.Tasks.Parallel": "4.0.1-beta-23321",
     "System.Threading.Thread": "4.0.0-beta-23321",
     "System.Xml.XDocument": "4.0.11-beta-23321",
     "System.Xml.XmlDocument": "4.0.1-beta-23321",
