Use completion list tabs in VB completion * Add a provider for Booleans * Add a tab when displaing enums

--- a/src/Features/VisualBasic/Portable/BasicFeatures.vbproj
+++ b/src/Features/VisualBasic/Portable/BasicFeatures.vbproj
@@ -140,6 +140,7 @@
     <Compile Include="CodeRefactorings\IntroduceVariable\IntroduceVariableCodeRefactoringProvider.vb" />
     <Compile Include="CodeRefactorings\InvertIf\InvertIfCodeRefactoringProvider.vb" />
     <Compile Include="CodeRefactorings\RemoveStatementCodeAction.vb" />
+    <Compile Include="Completion\CompletionProviders\BooleanCompletionProvider.vb" />
     <Compile Include="Completion\CompletionProviders\CompletionListTagCompletionProvider.vb" />
     <Compile Include="Completion\CompletionProviders\CompletionUtilities.vb" />
     <Compile Include="Completion\CompletionProviders\CrefCompletionProvider.ItemRules.vb" />
