Remove '.sh' extension from the coreclr csc/vbc scripts
Naming the execution scripts 'csc.sh' and 'vbc.sh' is counter to the
convention of not using any extension on *nix executables. While the
scripts are not strictly executable programs, they are meant to be
transparent shims around the actual execution of the compilers on *nix

--- a/src/Compilers/VisualBasic/VbcCore/VbcCore.csproj
+++ b/src/Compilers/VisualBasic/VbcCore/VbcCore.csproj
@@ -80,7 +80,7 @@
     <InternalsVisibleToTest Include="Roslyn.Compilers.VisualBasic.CommandLine.UnitTests" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="vbc.sh">
+    <None Include="vbc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="vbc.cmd">
