--- a/src/Compilers/Core/VBCSCompiler/project.lock.json
+++ b/src/Compilers/Core/VBCSCompiler/project.lock.json
@@ -24,7 +24,7 @@
         }
       }
     },
-    ".NETFramework,Version=v4.5/win-anycpu": {
+    ".NETFramework,Version=v4.5/win7-anycpu": {
       "Microsoft.DiaSymReader.Native/1.1.0-alpha2": {},
       "System.Collections.Immutable/1.1.36": {
         "compile": {
