--- a/src/Tools/Source/CompilerGeneratorTools/Source/BoundTreeGenerator/project.lock.json
+++ b/src/Tools/Source/CompilerGeneratorTools/Source/BoundTreeGenerator/project.lock.json
@@ -3,7 +3,7 @@
   "version": 1,
   "targets": {
     ".NETFramework,Version=v4.5": {},
-    ".NETFramework,Version=v4.5/win-anycpu": {}
+    ".NETFramework,Version=v4.5/win7-anycpu": {}
   },
   "libraries": {},
   "projectFileDependencyGroups": {
