--- a/src/Tools/Source/MetadataVisualizer/project.lock.json
+++ b/src/Tools/Source/MetadataVisualizer/project.lock.json
@@ -32,7 +32,7 @@
         }
       }
     },
-    ".NETFramework,Version=v4.5/win-anycpu": {
+    ".NETFramework,Version=v4.5/win7-anycpu": {
       "Microsoft.DiaSymReader/1.0.5.1": {
         "compile": {
           "lib/net20/Microsoft.DiaSymReader.dll": {}
