--- a/src/Compilers/Core/VBCSCompiler/project.json
+++ b/src/Compilers/Core/VBCSCompiler/project.json
@@ -1,9 +1,10 @@
 {
   "dependencies": { },
   "frameworks": {
-    "net45": {}
+    "net45": { }
   },
   "runtimes": {
-    "win7-anycpu": { }
+    "win7-anycpu": { },
+    "ubuntu.14.04-anycpu": { }
   }
 }
