--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Mocks\IUnconfiguredProjectVsServicesFactory.cs" />
     <Compile Include="Mocks\IVsHierarchyFactory.cs" />
     <Compile Include="ProjectSystem\Designers\ProjectDesignerPageMetadataTests.cs" />
+    <Compile Include="ProjectSystem\UnconfiguredProjectVsServicesTests.cs" />
     <Compile Include="ProjectSystem\VsProjectFeaturesTests.cs" />
   </ItemGroup>
   <ItemGroup>
