Added tests for CSharpProjectImageProvider/VisualBasicProjectImageProvider

--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.CSharp.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.CSharp.VS.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.CSharp.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.CSharp.VS.UnitTests.csproj
@@ -177,6 +177,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProjectSystem\Designers\CSharpProjectDesignerPageProviderTests.cs" />
+    <Compile Include="ProjectSystem\Designers\Imaging\CSharpProjectImageProviderTests.cs" />
     <Compile Include="ProjectSystem\LanguageServices\CSharpCodeDomProviderTests.cs" />
   </ItemGroup>
   <Import Project="..\..\..\..\build\Targets\VSL.Imports.targets" />
