--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.VisualBasic.VS.UnitTests.csproj
@@ -174,6 +174,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProjectSystem\Designers\Imaging\VisualBasicProjectImageProviderTests.cs" />
     <Compile Include="ProjectSystem\Designers\VisualBasicProjectDesignerPageProviderTests.cs" />
     <Compile Include="ProjectSystem\LanguageServices\VisualBasicCodeDomProviderTests.cs" />
   </ItemGroup>
