Improve GTD & simplification of anonymous type properties
Fixes #3589

Consider the anonymous type:

```C#
var x = new { A.z }
```

There are two main changes here:
 - SymbolFinder.FindSymbolAtPosition now prefers "A.z" over "<anonymous type>.z" when looking up symbols at "z" in the above code. Consumers of this API will now get a consistent result between the case of "z" in "{ A.z }" and the case of "z" in "{ t = A.z }". **Note**: This is a behavioral change of a public API.
 - Add simplifier expansion and reduction handling of implicitly named anonymous type property declarators. A declarator such as that in "new { A.z }" is expanded to "new { A = A.z }", any relevant code fixes are performed, and then the "A = " is removed if the expression on the right is of the right kind (identifier or member access) and would cause the property to be named "A".

--- a/src/Workspaces/CSharp/Portable/CSharpWorkspace.csproj
+++ b/src/Workspaces/CSharp/Portable/CSharpWorkspace.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Simplification\AbstractCSharpReducer.AbstractExpressionRewriter.cs" />
     <Compile Include="Simplification\AbstractCSharpReducer.cs" />
     <Compile Include="Simplification\CSharpCastReducer.cs" />
+    <Compile Include="Simplification\CSharpAnonymousTypePropertyReducer.Rewriter.cs" />
     <Compile Include="Simplification\CSharpCastReducer.Rewriter.cs" />
     <Compile Include="Simplification\CSharpEscapingReducer.cs" />
     <Compile Include="Simplification\CSharpEscapingReducer.Rewriter.cs" />
@@ -208,6 +209,7 @@
     <Compile Include="Simplification\CSharpSimplificationService.cs" />
     <Compile Include="Simplification\CSharpSimplificationService.Expander.cs" />
     <Compile Include="Simplification\CSharpSimplificationService.NodesAndTokensToReduceComputer.cs" />
+    <Compile Include="Simplification\CSharpAnonymousTypePropertyReducer.cs" />
     <Compile Include="Utilities\CompilationOptionsConversion.cs" />
     <Compile Include="Utilities\FormattingRangeHelper.cs" />
     <Compile Include="Utilities\NameSyntaxComparer.cs" />
