--- a/src/Scripting/CSharp/CSharpScripting.csproj
+++ b/src/Scripting/CSharp/CSharpScripting.csproj
@@ -46,8 +46,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="CommandLine\Csi.cs" />
-    <Compile Include="CSharpObjectFormatter.cs" />
+    <Compile Include="Hosting\CommandLine\Csi.cs" />
+    <Compile Include="Hosting\ObjectFormatter\CSharpObjectFormatter.cs" />
     <Compile Include="CSharpScript.cs" />
     <Compile Include="CSharpScriptCompiler.cs" />
     <Compile Include="CSharpScriptingResources.Designer.cs">
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="csi" />
-     <!-- TODO: remove, see https://github.com/dotnet/roslyn/issues/5661 -->
+    <!-- TODO: remove, see https://github.com/dotnet/roslyn/issues/5661 -->
     <InternalsVisibleTo Include="Microsoft.CodeAnalysis.CSharp.InteractiveEditorFeatures" />
     <!-- /TODO -->
     <InternalsVisibleToTest Include="Roslyn.Compilers.CSharp.Emit.UnitTests" />
