First initial test class for OpenProjectDesignerCommand.

--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.VS.UnitTests.csproj
@@ -171,6 +171,7 @@
   <ItemGroup>
     <Compile Include="Mocks\IUnconfiguredProjectVsServicesFactory.cs" />
     <Compile Include="Mocks\IVsHierarchyFactory.cs" />
+    <Compile Include="ProjectSystem\Designers\Input\Commands\OpenProjectDesignerCommandTests.cs" />
     <Compile Include="ProjectSystem\Designers\ProjectDesignerPageMetadataTests.cs" />
     <Compile Include="ProjectSystem\UnconfiguredProjectVsServicesTests.cs" />
     <Compile Include="ProjectSystem\VsProjectFeaturesTests.cs" />
