--- a/src/Scripting/Core/project.json
+++ b/src/Scripting/Core/project.json
@@ -4,7 +4,7 @@
     "dnxcore50.app": {}
   },
   "dependencies": {
-    "Microsoft.NETCore.Portable.Compatibility": "1.0.0",
+    "Microsoft.NETCore.Portable.Compatibility": "1.0.1-beta-23401",
     "System.Collections": "4.0.10",
     "System.Collections.Immutable": "1.1.36",
     "System.Console": "4.0.0-beta-23123",
