Added tests for OpenProjectDesignerXXXCommand objects

--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests/Microsoft.VisualStudio.ProjectSystem.Managed.UnitTests.csproj
@@ -140,13 +140,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mocks\IActiveConfiguredProjectFactory.cs" />
-    <Compile Include="Mocks\IPropertyData.cs" />
+    <Compile Include="Mocks\PropertyPageData.cs" />
     <Compile Include="Mocks\IUnconfiguredProjectCommonServicesFactory.cs" />
     <Compile Include="Mocks\ProjectPropertiesFactory.cs" />
     <Compile Include="Mocks\IProjectImageProviderFactory.cs" />
     <Compile Include="Mocks\IProjectTreeProviderFactory.cs" />
     <Compile Include="Mocks\IUnconfiguredProjectFactory.cs" />
-    <Compile Include="Mocks\IProjectFeaturesFactory.cs" />
+    <Compile Include="Mocks\IProjectDesignerServiceFactory.cs" />
     <Compile Include="Mocks\IThreadHandlingFactory.cs" />
     <Compile Include="Moq\ReturnsExtensions.cs" />
     <Compile Include="FuncWithOut.cs" />
