--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.VS/Microsoft.VisualStudio.ProjectSystem.Managed.VS.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed.VS/Microsoft.VisualStudio.ProjectSystem.Managed.VS.csproj
@@ -136,7 +136,7 @@
     <Compile Include="ProjectSystem\IUnconfiguredProjectVsServices.cs" />
     <Compile Include="ProjectSystem\LanguageServices\LanguageServiceHostBase.cs" />
     <Compile Include="ProjectSystem\UnconfiguredProjectVsServices.cs" />
-    <Compile Include="ProjectSystem\VsProjectFeatures.cs" />
+    <Compile Include="ProjectSystem\Designers\ProjectDesignerService.cs" />
     <Compile Include="Shell\HierarchyId.cs" />
     <Compile Include="Shell\Interop\VsProjectExtensions.cs" />
     <Compile Include="Shell\Interop\VsHierarchyExtensions.cs" />
