--- a/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed/Microsoft.VisualStudio.ProjectSystem.Managed.csproj
+++ b/src/VisualStudio/ProjectSystem/Microsoft.VisualStudio.ProjectSystem.Managed/Microsoft.VisualStudio.ProjectSystem.Managed.csproj
@@ -113,7 +113,7 @@
     <Compile Include="ProjectSystem\Designers\Input\ProjectCommandBase.cs" />
     <Compile Include="ProjectSystem\Designers\Input\ProjectCommandAttribute.cs" />
     <Compile Include="ProjectSystem\Designers\ProjectTreeModifierBase.cs" />
-    <Compile Include="ProjectSystem\IProjectFeatures.cs" />
+    <Compile Include="ProjectSystem\Designers\IProjectDesignerService.cs" />
     <Compile Include="ProjectSystem\IUnconfiguredProjectCommonServices.cs" />
     <Compile Include="ProjectSystem\ProjectCapability.cs" />
     <Compile Include="ProjectSystem\Designers\AppDesignerFolderProjectTreeModifierBase.cs" />
